[tool.poetry]
name = "aws-events-exporter"
version = "0.1.0"
description = ""
authors = ["Alex Gelman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
pandas = "^1.5.0"
pytz = "^2022.4"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
